# LongMathToCalcPI

./: Makefile  README.md  a.out  calc_pi.cpp
PiCalculating/: CMakeLists.txt
PiCalculating/LongMath/: CMakeLists.txt
PiCalculating/LongMath/include/: long_math.hpp
PiCalculating/LongMath/src/: long_math.cpp
PiCalculating/LongMath/test/: test.cpp
PiCalculating/cmake/: Core.cmake
PiCalculating/include/: calc_pi.h  calc_pi.h.in
PiCalculating/src/: calc_pi.cpp
PiCalculating/test/: test.cpp
PiCalculating_build/: PiCalculating
PiCalculating_build/LongMath/: FooTest  LongMathTest  LongMathTest[1]_include.cmake  LongMathTest[1]_tests.cmake  MathTest  MathTest[1]_include.cmake  MathTest[1]_tests.cmake  hello_test  hello_test[1]_include.cmake  hello_test[1]_tests.cmake  test[1]_include.cmake
include/: long_math.hpp
src/: long_math.cpp  long_math_test.cpp
